# icey_ecosystems

./: .buildinfo  .gitignore  CNAME  README.html  README.md  _config.yml  _toc.yml  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  template.html
_sources/: README.md  template.ipynb
_sources/content/: 0_home.md  1_analysis.ipynb  1_gridded_par_estimation.ipynb
_static/: custom.css
_templates/: layout.html
content/: 0_home.html  0_home.md  1_analysis.html  1_gridded_par_estimation.html  Untitled  utils.py
learn/: 2e_winter_arctic_sea_ice_variability_2025update.html
