[project]
name = "icey_ecosystems"
version = "0.1.0"
description = "A research project focused on ice-based ecosystems analysis"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Core scientific packages
    "numpy>=2.0.0",
    "scipy>=1.13.0",
    "matplotlib>=3.9.0",
    "pandas>=2.3.0",
    "xarray>=2025.1.1",
    # Geospatial packages
    "cartopy>=0.23.0",
    "pyproj>=3.7.0",
    "geopandas>=1.0.0",
    "shapely>=2.1",
    "fiona>=1.10.0",
    "rasterio>=1.4.0",
    "rioxarray>=0.15.0",
    "regionmask>=0.12.1",
    # NetCDF and data handling
    "netcdf4>=1.7.0",
    "h5py>=3.11.0",
    "zarr>=3.1.0",
    "dask>=2024.1.0",
    "distributed>=2024.1.0",
    "cftime>=1.6.4",
    # Visualization
    "bokeh>=3.4.0",
    "holoviews>=1.19.0",
    "hvplot>=0.10.0",
    "panel>=1.4.0",
    "datashader>=0.16.0",
    "colorcet>=3.1.0",
    # Jupyter ecosystem
    "jupyter-book>=1.0.4",
    "ipykernel>=6.29.0",
    "notebook>=7.0.0",
    # Additional scientific packages
    "astropy>=6.0.0",
    "numba>=0.60.0",
    "cf-xarray>=0.9.4",
    "pooch>=1.8.1",
    "sparse>=0.15.5",
    # AWS and cloud
    "arraylake>=0.25.0",
    "boto3>=1.40.0",
    "s3fs>=2025.3.0",
    # Utilities
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "ghp-import>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["icey_ecosystems"]

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
